2007-03-09  Sebastien Pouliot  <sebastien@ximian.com>

	* MetafileHeader.cs: Fix offset to match correct C definition.

2007-02-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Metafile.cs: Implement a few cases required to playback metafiles.
	* MetafileHeader.cs: Implemented.
	* MetaHeader.cs: Implemented.
	* WmfPlaceableFileHeader.cs: Adjust packing.

2007-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAttribute.cs: Reuse code in SetColorMatrix overloads.

2007-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageCodecInfo.cs: Remove MonoTODO on SignaturePatterns.

2006-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAttributes.cs: Better MonoTODO description.
	* ImageCodecInfo.cs: Add MonoTODO description.
	* Metafile.cs: Use a single MonoTODO on the class itself. MoMA will 
	detect and report that every ctors/methods/properties are throwing  
	NotImplementedException.
	* MetafileHeader.cs: Use a single MonoTODO on the class itself. MoMA 
	will detect and report that every ctors/methods/properties are 
	throwing NotImplementedException.

2006-10-31  Sebastien Pouliot  <sebastien@ximian.com>

	* MetaHeader.cs: Fix layout (order is important in sequential structs)
	and use the struct field names;
	* WmfPlaceableFileHeader.cs: Implement all TODO.

2006-09-14  Sebastien Pouliot  <sebastien@ximian.com>

	* BitmapData.cs: Change fields visibility to private as they either
	have get/set properties or shouldn't be used in managed code (as they
	do not exists when using MS GDI+). Added more warnings comments.

2006-09-01  Sebastien Pouliot  <sebastien@ximian.com>

	* BitmapData.cs: Invert left and top fields to be in sync with gdip.h

2006-08-25  Sebastien Pouliot  <sebastien@ximian.com>

	* ColorMatrix.cs: Add Alloc and Free method helpers for interop.
	* ImageAttributes.cs: Fix all methods accepting a ColorMatrix (i.e.
	which calls GdipSetImageAttributesColorMatrix) to use IntPtr instead
	of the ColorMatrix itself.
